aligned update feedback button and other small fixes

--- a/frontend/src/styles/pages/editFeedbackPage.scss
+++ b/frontend/src/styles/pages/editFeedbackPage.scss
@@ -78,6 +78,10 @@
               margin-left: 0;
             }
           }
+
+          .EditFeedback-button {
+            margin-left: 16px;
+          }
         }
       }
     }
